--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
   --darkColor: rgb(31, 34, 40);
-  --orangeColor: rgb(242, 143, 59);
+  --orangeColor: rgb(242, 144, 59);
   --whiteColor: rgb(245, 240, 240);
 }
 
@@ -26,7 +26,7 @@ body {
   grid-template: 60px repeat(6, 32px) / repeat(4, 25%); /* rows / columns */
 }
 
-.button {
+button {
   background-color: var(--orangeColor);
   color: var(--darkColor);
 
@@ -80,7 +80,7 @@ body {
   max-width: 75vw;
   padding: 12px;
 }
-.history.show {
+.show {
   visibility: visible;
 }
 hr {
